# solana-school-tasks-and-programs

./: PROJECT_DESCRIPTION.md  README.md  README_CNFT_INTEGRATION.md  package-lock.json
anchor_project/: Anchor.toml  README.md  deploy.sh  init-simple.js  package-lock.json  temp_init_config.ts
anchor_project/programs/dear_future/: Cargo.toml
anchor_project/scripts/: init-config.sh  initialize-config.ts
anchor_project/tests/: dear_future.ts  dear_future_capsule.ts  dear_future_edge_cases.ts
frontend/: HELIUS_PINATA_SETUP.md  README.md  package-lock.json  package.json
frontend/scripts/: admin-keypair.json  create-merkle-tree.ts  generate-keypair.ts  tree-config.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BentoGrid.tsx  CapsuleMinter.tsx  CapsuleUpdateModal.tsx  MyCapsules.tsx  Navigation.tsx  TabNavigation.tsx  TransactionDisplay.tsx  WebSocketStatus.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/hooks/: useHeliusWebSocket.ts
frontend/src/idl/: dear_future.json
frontend/src/lib/: dummyData.ts  rpc-config.ts  utils.ts
program-Shahadh7/anchor_project/: Anchor.toml  deploy.sh
program-Shahadh7/anchor_project/programs/dear_future/: Cargo.toml
program-Shahadh7/anchor_project/programs/dear_future/src/: errors.rs  lib.rs
program-Shahadh7/anchor_project/programs/dear_future/src/instructions/: close_capsule.rs  initialize_config.rs  mod.rs
program-Shahadh7/frontend/: README.md  package-lock.json  package.json
src/: shapes.rs
task2-Shahadh7/src/: calculator.rs
task4-Shahadh7/: package-lock.json
(+55 files in other folders)
