[package]
name = "dear_future"
version = "0.1.0"
description = "Time-locked memory capsules with pNFT integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dear_future"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"